@@ -1,6 +1,6 @@
 #source: reloc-009.s
 #ld: -T $srcdir/$subdir/reloc-012.ld
-#error: relocation truncated to fit: R_D10V_10_PCREL_R foo$
+#error: relocation truncated to fit: R_D10V_10_PCREL_R
 
 # Test 10 bit pc rel reloc negative normal bad.
 
