@@ -1,7 +1,7 @@
 #source: reloc-005.s
 #ld: -T $srcdir/$subdir/reloc-016.ld
 #objdump: -D
-#error: relocation truncated to fit: R_D10V_18_PCREL foo$
+#error: relocation truncated to fit: R_D10V_18_PCREL
 
 # Test 18 bit pc rel negative reloc normal bad
 
